# ind320

./: .env  .gitignore  0_home.py  Snow_drift.py  main.py  my_first_app.py  pyproject.toml  requirements.in  requirements.txt  utilities.py
.devcontainer/: devcontainer.json
.streamlit/: config.toml  secrets.toml
assignments/: assignment1.html  assignment1.ipynb  assignment2.ipynb  assignment3 copy.ipynb  assignment3.html  assignment3.ipynb
ia/: Collatz.py
lectures/: lecture_1.ipynb
pages/: 01_Page_1.py  01_Page_1️⃣.py  01_Page_4.py  01_🔋⚡️ Production.py  02_New A.py  02_Page_2_(new).py  02_Page_2️⃣.py  02_🔋⚡️ STL & spectrogram.py  03_Page_2.py  03_Page_3.py  03_Page_3️⃣.py  04_Page_3.py  04_Page_4_(new).py  04_Page_4️⃣.py  04_🌡️☁️  Plots.py  05_ New B.py  05_Page_5.py  05_🌡️☁️ Outliers & LOF.py  06_map & snow drift.py  06_map.py  07_Meteorology & energy production.py  08_Forecasting.py  _03_Page_2.py  comb_corr.py  comb_forecasting.py  comb_forecasting_2.py  comb_forecasting_weather.py  comb_map.py  el_forecasting.py  el_prod.py  el_stl_spect.py  weather_lof.py  weather_plots.py
