[project]
name = "ind320-my"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "plotly>=6.3.1",
    "pymongo>=4.15.3",
    "seaborn>=0.13.2",
    "streamlit>=1.50.0",
]
